{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 59,
  "lineage": "e7f80a38-4718-5c1c-6dc6-1bec78d47355",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "builder",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:717226006751:internet-gateway/igw-0220c906c95e61908",
            "id": "igw-0220c906c95e61908",
            "owner_id": "717226006751",
            "tags": {
              "Name": "kali-image-builder-igw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "kali-image-builder-igw",
              "Project": "Kali-Image-Builder"
            },
            "vpc_id": "vpc-0ece4586a1df4f3b3"
          },
          "dependencies": [
            "aws_vpc.builder"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:717226006751:route-table/rtb-0e5c254156ceded8f",
            "id": "rtb-0e5c254156ceded8f",
            "owner_id": "717226006751",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0220c906c95e61908",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kali-image-builder-public-rt"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "kali-image-builder-public-rt",
              "Project": "Kali-Image-Builder"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ece4586a1df4f3b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.builder",
            "aws_vpc.builder"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a27558d3b8c2729",
            "route_table_id": "rtb-0e5c254156ceded8f",
            "subnet_id": "subnet-05c9d1139d7cdc20a"
          },
          "dependencies": [
            "aws_internet_gateway.builder",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.builder",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "builder",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:717226006751:security-group/sg-084262b6c2361f1e7",
            "description": "Security group for Image Builder build instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-084262b6c2361f1e7",
            "ingress": [],
            "name": "kali-image-builder-sg",
            "name_prefix": "",
            "owner_id": "717226006751",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kali-image-builder-sg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "kali-image-builder-sg",
              "Project": "Kali-Image-Builder"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ece4586a1df4f3b3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.builder"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:717226006751:subnet/subnet-05c9d1139d7cdc20a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c9d1139d7cdc20a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "717226006751",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kali-image-builder-public-subnet"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "kali-image-builder-public-subnet",
              "Project": "Kali-Image-Builder"
            },
            "vpc_id": "vpc-0ece4586a1df4f3b3"
          },
          "dependencies": [
            "aws_vpc.builder",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "builder",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:717226006751:vpc/vpc-0ece4586a1df4f3b3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03b07a815612692e2",
            "default_route_table_id": "rtb-02aa215fc4c3cd8d7",
            "default_security_group_id": "sg-0a5d09e40c76f0b3c",
            "dhcp_options_id": "dopt-08a971acd7531105e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ece4586a1df4f3b3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02aa215fc4c3cd8d7",
            "owner_id": "717226006751",
            "tags": {
              "Name": "kali-image-builder-vpc"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "kali-image-builder-vpc",
              "Project": "Kali-Image-Builder"
            }
          }
        }
      ]
    }
  ]
}